--- a/index.html
+++ b/index.html
@@ -13,22 +13,25 @@
     <!-- Title -->
     <title>Jade Dak</title>
 
+    <!-- Logo -->
+    <link rel="shortcut icon" type="image/x-icon" href="logo.png" />
+
   </head>
   <body>
 
   <!-- Navbar -->
-  <ul class="nav justify-content-center">
+  <ul class="nav justify-content-center" id="navbar">
     <li class="nav-item">
-      <a class="nav-link" href="#home">HOME</a>
+      <a class="nav-link" style="color:white;" href="#home">HOME</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="#aboutme">ABOUT ME</a>
+      <a class="nav-link" style="color:white;" href="#aboutme">ABOUT</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="#portfolio">PORTFOLIO</a>
+      <a class="nav-link" style="color:white;" href="#portfolio">PORTFOLIO</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="#contact">CONTACT</a>
+      <a class="nav-link" style="color:white;" href="#contact">CONTACT</a>
     </li>
   </ul>
 
@@ -38,11 +41,9 @@
     <!-- About me text -->
     <p class="headings">ABOUT ME</p>
     <p class="subheadings">coder | student | human </p>
-    <p style="margin-left: 25%; margin-right: 25%;">Lorem ipsum, dolor sit at enim? Facilis quisquam odit labore tenetur amet? 
-    Nostrum nobis ipsum voluptates aspernatur voluptatibus labore expedita commodi eveniet.
-    Ipsa voluptatem officia laudantium earum voluptatibus sunt sint pariatur,
-    voluptas cumque natus unde eligendi quo quidem possimus molestiae nam fuga. 
-    Debitis officiis voluptatum reprehenderit a iusto laboriosam id eveniet odio?
+    <p>The name’s JADE DAK. <br>
+      Student by profession, coder by passion.<br>
+      WhiteHat Jr certified Game developer and Android/iOS App developer.
     </p>
     
     <!-- Game Developer Certificate -->
