--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
   <!-- Navbar -->
   <ul class="nav justify-content-center" id="navbar">
     <li class="nav-item">
-      <a class="nav-link" style="color:white;" href="#home">HOME</a>
-    </li>
-    <li class="nav-item">
       <a class="nav-link" style="color:white;" href="#aboutme">ABOUT</a>
     </li>
     <li class="nav-item">
       <a class="nav-link" style="color:white;" href="#portfolio">PORTFOLIO</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" style="color:white;" href="#blogs">BLOGS</a>
     </li>
     <li class="nav-item">
       <a class="nav-link" style="color:white;" href="#contact">CONTACT</a>
@@ -41,8 +41,8 @@
     <!-- About me text -->
     <p class="headings">ABOUT ME</p>
     <p class="subheadings">coder | student | human </p>
-    <p>The name’s JADE DAK. <br>
-      Student by profession, coder by passion.<br>
+    <p style="margin-bottom: 30px; margin-left: 20%; margin-right: 20%;">The name’s JADE DAK.
+      Student by profession, coder by passion.
       WhiteHat Jr certified Game developer and Android/iOS App developer.
     </p>
     
@@ -88,12 +88,12 @@
 
   </div> 
   
-
   <!-- Portfolio -->
   <div class="portfolio p-5 text-center" id="portfolio"> 
 
   <!-- Heading -->
   <p class="headings">HERE'S WHAT I'VE DONE</p>
+  <p class="subheadings">my journey in coding</p>
 
   <!-- Pegion Institute -->
 <div class="card" style="max-width: 18rem;">
@@ -165,7 +165,37 @@
 
   </div>
 
-<!-- Contact -->
+  <!-- Blogs -->
+  <div class="blogs p-5 text-center" id="blogs">
+
+    <!-- About me text -->
+    <p class="headings">DIVE DEEP INTO MY MIND</p>
+    <p class="subheadings">my latest blogs</p>
+
+    <!-- Online Journaling -->
+    <div class="card" style="max-width: 18rem;">
+      <div class="card-body">
+        <a href="">
+          <text style="font-size: 19px;">Online Journaling</text><br>
+          <text style="font-size: 16px; color: gray;">Journal</text><br><br>
+          <p style="font-size: 14px;">A beginner's guide to online bullet journaling!</p>
+      </a>
+      </div>
+    </div>
+
+    <div class="card" style="max-width: 18rem;">
+      <div class="card-body">
+        <a href="">
+          <text style="font-size: 19px;">Minimalist Wardrobe</text><br>
+          <text style="font-size: 16px; color: gray;">Lifestyle</text><br><br>
+          <p style="font-size: 14px;">A beginner's guide to a minimalist wardrobe!</p>
+      </a>
+      </div>
+    </div>
+
+  </div>
+
+  <!-- Contact -->
 <div id="contact" class="contact">
   <a href="mailto: jadedak6@gmail.com"><img src="mail.png" alt="Mail Me" width="40px" height="40px"></a>
   <a href="https://in.pinterest.com/jadedak/_saved/"><img src="pinterest.png" alt="Pinterest" width="40px" height="40px"></a>
