--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
 
   <!-- About -->
   <div class="aboutme text-center" id="aboutme">
-
+    <img src="logo.png" alt="Jade Dak">
+    
     <!-- About me text -->
     <p class="headings">ABOUT ME</p>
     <p class="subheadings">coder | student | human </p>
