--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
   <!-- About -->
   <div class="aboutme text-center" id="aboutme">
-    <img src="logo.png" alt="Jade Dak">
+    <img src="logo.png" alt="Jade Dak" class="responsive">
     
     <!-- About me text -->
     <p class="headings">ABOUT ME</p>
