--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
     <!-- Pegion Institute -->
     <div class="card" style="max-width: 18rem;">
       <div class="card-body">
-        <a href="https://github.com/jadedak6/pegion-institute-of-robotics.git">
+        <a href="https://github.com/jadedak6/pegion-institute">
           <text style="font-size: 19px;">Pegion Institute</text><br>
           <text style="font-size: 16px; color: gray;">Web development</text><br><br>
           <p style="font-size: 14px;">I made a website for
