--- a/index.html
+++ b/index.html
@@ -110,11 +110,14 @@
     </div>
 
     <p class="headings">DIVE DEEP INTO MY MIND</p>
-    <p class="subheadings">my philosophy <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-emoji-laughing" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-      <path fill-rule="evenodd" d="M8 15A7 7 0 1 0 8 1a7 7 0 0 0 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
-      <path fill-rule="evenodd" d="M12.331 9.5a1 1 0 0 1 0 1A4.998 4.998 0 0 1 8 13a4.998 4.998 0 0 1-4.33-2.5A1 1 0 0 1 4.535 9h6.93a1 1 0 0 1 .866.5z"/>
-      <path d="M7 6.5c0 .828-.448 0-1 0s-1 .828-1 0S5.448 5 6 5s1 .672 1 1.5zm4 0c0 .828-.448 0-1 0s-1 .828-1 0S9.448 5 10 5s1 .672 1 1.5z"/>
-    </svg></p>
+    <p class="subheadings">my philosophy <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-emoji-laughing"
+        fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+        <path fill-rule="evenodd" d="M8 15A7 7 0 1 0 8 1a7 7 0 0 0 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z" />
+        <path fill-rule="evenodd"
+          d="M12.331 9.5a1 1 0 0 1 0 1A4.998 4.998 0 0 1 8 13a4.998 4.998 0 0 1-4.33-2.5A1 1 0 0 1 4.535 9h6.93a1 1 0 0 1 .866.5z" />
+        <path
+          d="M7 6.5c0 .828-.448 0-1 0s-1 .828-1 0S5.448 5 6 5s1 .672 1 1.5zm4 0c0 .828-.448 0-1 0s-1 .828-1 0S9.448 5 10 5s1 .672 1 1.5z" />
+      </svg></p>
     <p style="font-weight: 300;">
       Pursue passion, not paychecks<br>
       Efforts matter more than skill<br>
@@ -129,10 +132,23 @@
 
     <!-- Heading -->
     <p class="headings">HERE'S WHAT I'VE DONE</p>
-    <p class="subheadings">my journey in coding <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-laptop" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-      <path fill-rule="evenodd" d="M13.5 3h-11a.5.5 0 0 0-.5.5V11h12V3.5a.5.5 0 0 0-.5-.5zm-11-1A1.5 1.5 0 0 0 1 3.5V12h14V3.5A1.5 1.5 0 0 0 13.5 2h-11z"/>
-      <path d="M0 12h16v.5a1.5 1.5 0 0 1-1.5 1.5h-13A1.5 1.5 0 0 1 0 12.5V12z"/>
-    </svg></p>
+    <p class="subheadings">my journey in coding <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-laptop"
+        fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+        <path fill-rule="evenodd"
+          d="M13.5 3h-11a.5.5 0 0 0-.5.5V11h12V3.5a.5.5 0 0 0-.5-.5zm-11-1A1.5 1.5 0 0 0 1 3.5V12h14V3.5A1.5 1.5 0 0 0 13.5 2h-11z" />
+        <path d="M0 12h16v.5a1.5 1.5 0 0 1-1.5 1.5h-13A1.5 1.5 0 0 1 0 12.5V12z" />
+      </svg></p>
+
+    <!-- Text to Speech -->
+    <div class="card" style="max-width: 18rem;">
+      <div class="card-body">
+        <a href="https://snack.expo.io/@jadeda6/project-65-text-to-speech">
+          <text style="font-size: 19px;">Text to Speech</text><br>
+          <text style="font-size: 16px; color: gray;">App development</text><br><br>
+          <p style="font-size: 14px;">I made a app using react native to convert text to speech.</p>
+        </a>
+      </div>
+    </div>
 
     <!-- Pegion Institute -->
     <div class="card" style="max-width: 18rem;">
@@ -167,7 +183,7 @@
         </a>
       </div>
     </div>
-    <br>
+
 
     <!-- Car Racing -->
     <div class="card" style="max-width: 18rem;">
@@ -207,23 +223,28 @@
   <!-- Posts -->
   <div class="posts p-5 text-center" id="posts">
     <p class="headings">EVERY PICTURE TELLS A STORY</p>
-    <p class="subheadings">can you tell mine? <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-camera" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-      <path fill-rule="evenodd" d="M15 12V6a1 1 0 0 0-1-1h-1.172a3 3 0 0 1-2.12-.879l-.83-.828A1 1 0 0 0 9.173 3H6.828a1 1 0 0 0-.707.293l-.828.828A3 3 0 0 1 3.172 5H2a1 1 0 0 0-1 1v6a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1zM2 4a2 2 0 0 0-2 2v6a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V6a2 2 0 0 0-2-2h-1.172a2 2 0 0 1-1.414-.586l-.828-.828A2 2 0 0 0 9.172 2H6.828a2 2 0 0 0-1.414.586l-.828.828A2 2 0 0 1 3.172 4H2z"/>
-      <path fill-rule="evenodd" d="M8 11a2.5 2.5 0 1 0 0-5 2.5 2.5 0 0 0 0 5zm0 1a3.5 3.5 0 1 0 0-7 3.5 3.5 0 0 0 0 7z"/>
-      <path d="M3 6.5a.5.5 0 1 1-1 0 .5.5 0 0 1 1 0z"/>
-    </svg></p>
+    <p class="subheadings">can you tell mine? <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-camera"
+        fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+        <path fill-rule="evenodd"
+          d="M15 12V6a1 1 0 0 0-1-1h-1.172a3 3 0 0 1-2.12-.879l-.83-.828A1 1 0 0 0 9.173 3H6.828a1 1 0 0 0-.707.293l-.828.828A3 3 0 0 1 3.172 5H2a1 1 0 0 0-1 1v6a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1zM2 4a2 2 0 0 0-2 2v6a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V6a2 2 0 0 0-2-2h-1.172a2 2 0 0 1-1.414-.586l-.828-.828A2 2 0 0 0 9.172 2H6.828a2 2 0 0 0-1.414.586l-.828.828A2 2 0 0 1 3.172 4H2z" />
+        <path fill-rule="evenodd"
+          d="M8 11a2.5 2.5 0 1 0 0-5 2.5 2.5 0 0 0 0 5zm0 1a3.5 3.5 0 1 0 0-7 3.5 3.5 0 0 0 0 7z" />
+        <path d="M3 6.5a.5.5 0 1 1-1 0 .5.5 0 0 1 1 0z" />
+      </svg></p>
     <p>Sorry, seems like there are no posts yet.</p>
   </div>
 
   <!-- Contact -->
   <div id="contact" class="contact">
-    <a href="mailto: jadedak6@gmail.com"><img src="media/mail.png" alt="Mail Me"  class="icons"></a>
+    <a href="mailto: jadedak6@gmail.com"><img src="media/mail.png" alt="Mail Me" class="icons"></a>
     <a href="https://in.pinterest.com/jadedak/_saved/"><img src="media/pinterest.png" alt="Pinterest" class="icons"></a>
-    <a href="https://github.com/jadedak6"><img src="media/github.png" alt="Github"  class="icons"></a>
-    <a href="https://www.linkedin.com/in/jadedak26"><img src="media/linkedin.png" alt="Linked in"  class="icons"></a>
-    <a href="https://github.com/jadedak6"><img src="media/discord.png" alt="Discord"  class="icons"></a>
-    <p style="margin-top: 20px;">©2020 Jade Dak</p>
+    <a href="https://github.com/jadedak6"><img src="media/github.png" alt="Github" class="icons"></a>
+    <a href="https://www.linkedin.com/in/jadedak26"><img src="media/linkedin.png" alt="Linked in" class="icons"></a><br>
+    <img src="media/discord.png" alt="Discord" class="icons">
+    <text class="disabled" style="color: rgb(104, 104, 104);">@awkwardly_sassy#3278</text>
+    <p style="margin-top: 20px; color: grey; ">©2020 Jade Dak</p>
   </div>
+
 
 
   <!-- Optional JavaScript -->
