--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <title>Jade Dak</title>
 
   <!-- Logo -->
-  <link rel="shortcut icon" type="image/x-icon" href="media/logo.png" />
+  <link rel="shortcut icon" type="image/x-icon" href="media/logo2.png" />
 
 </head>
 
@@ -42,7 +42,7 @@
 
   <!-- About -->
   <div class="aboutme text-center" id="aboutme">
-    <img src="media/img.png" alt="Jade Dak" class="responsive">
+    <img src="media/img.png" alt="Jade Dak" class="responsive mt-5">
 
     <!-- About me text -->
     <p class="headings">ABOUT ME</p>
@@ -138,6 +138,17 @@
           d="M13.5 3h-11a.5.5 0 0 0-.5.5V11h12V3.5a.5.5 0 0 0-.5-.5zm-11-1A1.5 1.5 0 0 0 1 3.5V12h14V3.5A1.5 1.5 0 0 0 13.5 2h-11z" />
         <path d="M0 12h16v.5a1.5 1.5 0 0 1-1.5 1.5h-13A1.5 1.5 0 0 1 0 12.5V12z" />
       </svg></p>
+
+        <!-- Barcode Scanner -->
+    <div class="card" style="max-width: 18rem;">
+      <div class="card-body">
+        <a href="https://snack.expo.io/@jadeda6/qr-code-scanner">
+          <text style="font-size: 19px;">Barcode Scanner</text><br>
+          <text style="font-size: 16px; color: gray;">App development</text><br><br>
+          <p style="font-size: 14px;">I made a app using react native to scan a QR code.</p>
+        </a>
+      </div>
+    </div>
 
     <!-- Text to Speech -->
     <div class="card" style="max-width: 18rem;">
