--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <title>Jade Dak</title>
 
   <!-- Logo -->
-  <link rel="shortcut icon" type="image/x-icon" href="media/logo2.png" />
+  <link rel="shortcut icon" type="image/x-icon" href="media/logo.png" />
 
 </head>
 
