--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
     <li class="nav-item">
       <a class="nav-link" href="#portfolio">PORTFOLIO</a>
     </li>
-    <li class="nav-item">
+    <!-- <li class="nav-item">
       <a class="nav-link" href="#posts">POSTS</a>
-    </li>
+    </li> -->
     <li class="nav-item">
       <a class="nav-link" href="#contact">CONTACT</a>
     </li>
@@ -231,7 +231,7 @@
 
   </div>
 
-  <!-- Posts -->
+  <!-- Posts
   <div class="posts p-5 text-center" id="posts">
     <p class="headings">EVERY PICTURE TELLS A STORY</p>
     <p class="subheadings">can you tell mine? <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-camera"
@@ -243,7 +243,7 @@
         <path d="M3 6.5a.5.5 0 1 1-1 0 .5.5 0 0 1 1 0z" />
       </svg></p>
     <p>Sorry, seems like there are no posts yet.</p>
-  </div>
+  </div> -->
 
   <!-- Contact -->
   <div id="contact" class="contact">
@@ -251,8 +251,8 @@
     <a href="https://in.pinterest.com/jadedak/_saved/"><img src="media/pinterest.png" alt="Pinterest" class="icons"></a>
     <a href="https://github.com/jadedak6"><img src="media/github.png" alt="Github" class="icons"></a>
     <a href="https://www.linkedin.com/in/jadedak26"><img src="media/linkedin.png" alt="Linked in" class="icons"></a><br>
-    <img src="media/discord.png" alt="Discord" class="icons">
-    <text class="disabled" style="color: rgb(104, 104, 104);">@awkwardly_sassy#3278</text>
+    <!-- <img src="media/discord.png" alt="Discord" class="icons">
+    <text class="disabled" style="color: rgb(104, 104, 104);">@awkwardly_sassy#3278</text> -->
     <p style="margin-top: 20px; color: grey; ">©2020 Jade Dak</p>
   </div>
 
