--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
       </div>
     </div>
 
-    <!-- App Developer Certificate -->
+    <!-- App Developer Certificate ... -->
     <div class="card" style="padding: 0%;">
       <img src="media/app.png" alt="App Developer" height="300px" data-toggle="modal" data-target="#appmodal">
     </div>
