--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
   <link href="style.css" rel="stylesheet" type="text/css" />
 
-  <!-- Title -->
+  <!-- Titleeee -->
   <title>Jade Dak</title>
 
   <!-- Logo -->
