--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
   <!-- About -->
   <div class="aboutme text-center" id="aboutme">
-    <img src="jade4-removebg-preview.png" alt="Jade Dak" class="responsive mt-5">
+<!--     <img src="jade4-removebg-preview.png" alt="Jade Dak" class="responsive mt-5"> -->
 
     <!-- About me text -->
     <p class="headings">ABOUT ME</p>
