--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Bad+Script&family=Neucha&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Cutive+Mono&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
     integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
   <link href="style.css" rel="stylesheet" type="text/css" />
@@ -71,44 +73,12 @@
    
     <!-- Game Developer Certificate -->
     <div class="card" style="padding: 0%;">
-      <img src="media/gamebw.jpg" alt="Game Developer" height="300px" data-toggle="modal" data-target="#gamemodal">
-    </div>
-
-    <!-- Modal for Game Developer Certificate -->
-    <div class="modal fade responsivecertificate" id="gamemodal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-      aria-hidden="true">
-      <div class="modal-dialog" role="document"></div>
-      <div class="modal-content">
-        <div class="modal-header">
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
-        </div>
-        <div class="modal-body">
-          <img src="media/game.jpg" alt="" width="50%" class="responsivecertificate">
-        </div>
-      </div>
+      <a href="media/game.jpg"><img src="media/gamebw.jpg" alt="Game Developer" height="300px"></a>
     </div>
 
     <!-- App Developer Certificate ... -->
     <div class="card" style="padding: 0%;">
-      <img src="media/appbw.jpg" alt="App Developer" height="300px" data-toggle="modal" data-target="#appmodal">
-    </div>
-
-    <!-- Modal for App Developer Certificate -->
-    <div class="modal fade responsivecertificate" id="appmodal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-      aria-hidden="true">
-      <div class="modal-dialog" role="document"></div>
-      <div class="modal-content">
-        <div class="modal-header">
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
-        </div>
-        <div class="modal-body">
-          <img src="media/app.jpg" alt="" width="50%" class="responsivecertificate">
-        </div>
-      </div>
+      <a href="media/app.jpg"><img src="media/appbw.jpg" alt="Game Developer" height="300px"></a>
     </div>
 
   <!-- Portfolio -->
@@ -127,9 +97,9 @@
     <div class="card" style="max-width: 18rem;">
       <div class="card-body">
         <a href="https://snack.expo.io/@jadeda6/qr-code-scanner">
-          <text style="font-size: 19px;">Barcode Scanner</text><br>
-          <text style="font-size: 16px; color: gray;">App development</text><br><br>
-          <p style="font-size: 14px;">I made a app using react native to scan a QR code.</p>
+          <text style="font-size: 18px;">Barcode Scanner</text><br>
+          <text style="font-size: 14px; color: gray;">App development</text><br><br>
+          <p style="font-size: 12.5px;">I made a app using react native to scan a QR code.</p>
         </a>
       </div>
     </div>
@@ -138,9 +108,9 @@
     <div class="card" style="max-width: 18rem;">
       <div class="card-body">
         <a href="https://snack.expo.io/@jadeda6/project-65-text-to-speech">
-          <text style="font-size: 19px;">Text to Speech</text><br>
-          <text style="font-size: 16px; color: gray;">App development</text><br><br>
-          <p style="font-size: 14px;">I made a app using react native to convert text to speech.</p>
+          <text style="font-size: 18px;">Text to Speech</text><br>
+          <text style="font-size: 14px; color: gray;">App development</text><br><br>
+          <p style="font-size: 12.5px;">I made a app using react native to convert text to speech.</p>
         </a>
       </div>
     </div>
@@ -149,9 +119,9 @@
     <div class="card" style="max-width: 18rem;">
       <div class="card-body">
         <a href="https://github.com/jadedak6/pegion-institute">
-          <text style="font-size: 19px;">Pegion Institute</text><br>
-          <text style="font-size: 16px; color: gray;">Web development</text><br><br>
-          <p style="font-size: 14px;">I made a website for
+          <text style="font-size: 18px;">Pegion Institute</text><br>
+          <text style="font-size: 14px; color: gray;">Web development</text><br><br>
+          <p style="font-size: 12.5px;">I made a website for
             The Pegion Institute of Robotics</p>
         </a>
       </div>
@@ -161,9 +131,9 @@
     <div class="card" style="max-width: 18rem;">
       <div class="card-body">
         <a href="https://github.com/jadedak6/C-48-Expiry-Alert-S-5.git">
-          <text style="font-size: 19px;">Expiry Alert</text><br>
-          <text style="font-size: 16px; color: gray;">App development</text><br><br>
-          <p style="font-size: 14px;">I made an expiry alert app using HTML, CSS, and JavaScript.</p>
+          <text style="font-size: 18px;">Expiry Alert</text><br>
+          <text style="font-size: 14px; color: gray;">App development</text><br><br>
+          <p style="font-size: 12.5px;">I made an expiry alert app using HTML, CSS, and JavaScript.</p>
         </a>
       </div>
     </div>
@@ -172,9 +142,9 @@
     <div class="card" style="max-width: 18rem;">
       <div class="card-body">
         <a href="https://github.com/jadedak6/C-33-AB-S9.git">
-          <text style="font-size: 19px;">Angry Bird</text><br>
-          <text style="font-size: 16px; color: gray;">Game development</text><br><br>
-          <p style="font-size: 14px;">I made the angry bird game using JavaScript.</p>
+          <text style="font-size: 18px;">Angry Bird</text><br>
+          <text style="font-size: 14px; color: gray;">Game development</text><br><br>
+          <p style="font-size: 12.5px;">I made the angry bird game using JavaScript.</p>
         </a>
       </div>
     </div>
@@ -184,9 +154,9 @@
     <div class="card" style="max-width: 18rem;">
       <div class="card-body">
         <a href="https://github.com/jadedak6/C-40-CR-S7.git">
-          <text style="font-size: 19px;">Car Racing</text><br>
-          <text style="font-size: 16px; color: gray;">Game development</text><br><br>
-          <p style="font-size: 14px;">I made a multiplayer car racing using JavaScript, and firebase.</p>
+          <text style="font-size: 18px;">Car Racing</text><br>
+          <text style="font-size: 14px; color: gray;">Game development</text><br><br>
+          <p style="font-size: 12.5px;">I made a multiplayer car racing using JavaScript, and firebase.</p>
         </a>
       </div>
     </div>
@@ -195,9 +165,9 @@
     <div class="card" style="max-width: 18rem;">
       <div class="card-body">
         <a href="https://github.com/jadedak6/C-19-Trex-Game.git">
-          <text style="font-size: 19px;">Trex Game</text><br>
-          <text style="font-size: 16px; color: gray;">Game development</text><br><br>
-          <p style="font-size: 14px;">I made the classic trex game using JavaScript.</p>
+          <text style="font-size: 18px;">Trex Game</text><br>
+          <text style="font-size: 14px; color: gray;">Game development</text><br><br>
+          <p style="font-size: 12.5px;">I made the classic trex game using JavaScript.</p>
         </a>
       </div>
     </div>
@@ -206,9 +176,9 @@
     <div class="card" style="max-width: 18rem;">
       <div class="card-body">
         <a href="https://github.com/jadedak6/P-33-Plinko-2.git">
-          <text style="font-size: 19px;">Plinko</text><br>
-          <text style="font-size: 16px; color: gray;">Game development</text><br><br>
-          <p style="font-size: 14px;">I made a plinko game using HTML, CSS, and JavaScript.</p>
+          <text style="font-size: 18px;">Plinko</text><br>
+          <text style="font-size: 14px; color: gray;">Game development</text><br><br>
+          <p style="font-size: 12.5px;">I made a plinko game using HTML, CSS, and JavaScript.</p>
         </a>
       </div>
     </div>
